--- a/app/diwi/trunk/client/web/css/maakroute.css
+++ b/app/diwi/trunk/client/web/css/maakroute.css
@@ -3,13 +3,13 @@
  width: 800px;
  top: 0px;
  left: 0px;
- z-index: 100;
+ z-index: 50;
 }
 
 .slidertext{
  position:absolute;
  left: 420px;
- z-index: 100;
+ z-index: 50;
  width:auto; 
 }
 .slidercaption{
@@ -18,7 +18,7 @@
  font-size:12px;
  position:absolute;
  left: 20px;
- z-index: 100;
+ z-index: 50;
  width:auto; 
 }
 .radiocaption{
@@ -30,11 +30,13 @@
 #caption1{
  top: 223px;
 }
+
+
 #slider1 {
  position: absolute;
  top: 222px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #besloten {
  top: 220px;
@@ -47,7 +49,7 @@
  position: absolute;
  top: 252px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #halfopen {
  top: 250px;
@@ -61,7 +63,7 @@
  position: absolute;
  top: 282px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #open {
  top: 280px;
@@ -74,7 +76,7 @@
  position: absolute;
  top: 312px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #bedrijven {
  top: 310px;
@@ -87,7 +89,7 @@
  position: absolute;
  top: 342px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #bewoning {
  top: 340px;
@@ -100,7 +102,7 @@
  position: absolute;
  top: 372px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #bos {
  top: 370px;
@@ -113,7 +115,7 @@
  position: absolute;
  top: 402px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #heide {
  top: 400px;
@@ -126,7 +128,7 @@
  position: absolute;
  top: 432px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #grasland {
  top: 430px;
@@ -139,7 +141,7 @@
  position: absolute;
  top: 462px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #zee {
  top: 460px;
@@ -152,7 +154,7 @@
  position: absolute;
  top: 492px;
  left: 200px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #sloten {
  top: 490px;
@@ -162,8 +164,8 @@
  position: absolute;
  width: 80px;
  top: 520px;
- left: 400px;
- z-index: 10000; 
+ left: 390px;
+ z-index: 60; 
 }	
 
 
@@ -172,14 +174,14 @@
  width: 50px;
  top: 80px;
  left: 100px;
- z-index: 100; 
+ z-index: 50; 
 }	
 #totaltekst {
  position: absolute;
  width: 50px;
  top: 170px;
  left: 100px;
- z-index: 100; 
+ z-index: 50; 
 }	
 
 #radiobuttons { 
@@ -187,7 +189,7 @@
  width: auto;
  top: 530px;
  left: 220px;
- z-index: 500; 
+ z-index: 60; 
 }
 
 #radiobuttons input {
@@ -199,7 +201,7 @@
 .listboxes{
  position:absolute;
  top:130px;
- z-index: 100;
+ z-index: 50;
  width:auto; 
 }
 .listboxes p{
@@ -218,26 +220,39 @@
 #afstand-lb{
  left: 405px;
 }
-
+#maakroutebox {
+ position: absolute;
+ width: auto;
+ top: 50px;
+ left: 565px;
+ z-index: 50;
+}
+.genroutetekst{
+ text-align:center;
+ line-height:13px;
+ font-size:12px;
+ color:#660000;
+ }
+ 
 #generated-routes{
  position: absolute;
  width: auto;
- top: 80px;
- left: 615px;
- z-index: 500;
+ top: 50px;
+ left: 605px;
+ z-index: 60;
  }
 
 #generated-routes-image{
  position: absolute;
  width: auto;
- top: 380px;
- left: 615px;
- z-index: 500;
+ top: 350px;
+ left: 605px;
+ z-index: 60;
  }
 #generated-routes-image-big{
  position: absolute;
  width: auto;
  top: 80px;
  left: 50px;
- z-index: 500;
+ z-index: 60;
  }
