--- a/app/diwi/trunk/client/web/css/mypagebasis.css
+++ b/app/diwi/trunk/client/web/css/mypagebasis.css
@@ -4,6 +4,7 @@ body {
  padding: 0;
  font-size: 1.1em;
  font-family: verdana, arial, helvetica, sans-serif;
+ color:#5a3d1c;
 }
 h1 {
  font-family: verdana, arial, helvetica, sans-serif;
