wnp: going for alpha

--- a/app/walkandplay/trunk/client/phone/resources/Series60/polish.css
+++ b/app/walkandplay/trunk/client/phone/resources/Series60/polish.css
@@ -13,10 +13,7 @@ menu {
 }
 
 .mainScreen {
-	/*background {
-		type: image;
-		color: transparent;
-		image: url( bg.png );
-	}*/
+	/*background-color: transparent;*/
+	/*background-image: url( bg.png );*/	
 }
 
