--- a/app/jgps/trunk/server/webapp/css/brainport.css
+++ b/app/jgps/trunk/server/webapp/css/brainport.css
@@ -5,7 +5,7 @@
 }
 
 a:link {
-	color: #EE3224;
+	color: #004b7d;
 	text-decoration: none;
 	font-weight: bold;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -13,7 +13,7 @@ a:link {
 
 a:visited {
 	text-decoration: none;
-	color: #EE3224;
+	color: #004b7d;
 	font-weight: bold;
 }
 
@@ -63,7 +63,7 @@ a:visited {
 .nieuwsberichttitel, .teksttitel {
 	font-size: 12px;
 	font-weight: bold;
-	color: #EE3224;
+	color: #004b7d;
 	letter-spacing: 2px;
 	padding-top: 1px;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -83,13 +83,13 @@ a:visited {
 
 a:hover {
 	text-decoration: underline;
-	color: #0E3224;
+	color: #004b7d;
 	font-weight: bold;
 }
 
 a:active {
 	text-decoration: none;
-	color: #EE3224;
+	color: #004b7d;
 	font-weight: bold;
 }
 
@@ -113,7 +113,7 @@ a:active {
 }
 
 .imagekaderrood {
-	border: 10px solid #EE3224;
+	border: 10px solid #004b7d;
 	margin-top: 5px;
 	margin-right: 5px;
 	margin-bottom: 5px;
