--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -34,7 +34,7 @@ a {
  font-family: verdana, arial, helvetica, sans-serif;
 /* font-weight: 600;*/
  text-decoration: underline;
- cursor:hand;
+ cursor:pointer;
 }
 a:link {
 }
