--- a/app/diwi/trunk/client/web/css/mijnpagina.css
+++ b/app/diwi/trunk/client/web/css/mijnpagina.css
@@ -44,6 +44,13 @@ lichter {
  left: 578px;
  z-index: 50;
 }
+#bullet {
+ position: absolute;
+ width: auto;
+ top: 245px;
+ left: 578px;
+ z-index: 20;
+}
 #commentaarbox {
  position: absolute;
  width: auto;
