--- a/app/diwi/trunk/client/web/css/mypagebasis.css
+++ b/app/diwi/trunk/client/web/css/mypagebasis.css
@@ -43,6 +43,7 @@ a {
  font-family: verdana, arial, helvetica, sans-serif;
 /* font-weight: 600;*/
  text-decoration: none;
+ cursor:pointer;
 }
 a:link {
 }
