--- a/app/jgps/trunk/server/webapp/css/brainport.css
+++ b/app/jgps/trunk/server/webapp/css/brainport.css
@@ -4,6 +4,12 @@
 	color: #000000;
 }
 
+.p {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 10px;
+	color: #000000;
+}
+
 a:link {
 	color: #02497d;
 	text-decoration: none;
