--- a/app/geosailing/trunk/svr2007/server/webapp/popup/css/popup.css
+++ b/app/geosailing/trunk/svr2007/server/webapp/popup/css/popup.css
@@ -1,8 +1,15 @@
 .popup {
 	margin-left:8px;
 	margin-right:8px;
-	font-family: Arial, Helvetica, sans-serif;
+	background-color:#000000;
+	padding:5px;
+	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
+	color:#FFFFFF;
+}
+
+.pn-content {
+  background-color: #000000;
 }
 
 .popup a {
