--- a/app/walkandplay/trunk/client/web/style/wp.css
+++ b/app/walkandplay/trunk/client/web/style/wp.css
@@ -24,7 +24,7 @@ select
 {
 	border:1px solid #adadad;
 	background-color:white;
-	height:16px;
+	/*height:16px;*/
 	font-size:10px;
 	font-family:verdana,sans-serif;
 	padding-left:2px;
@@ -197,7 +197,10 @@ input, textarea
 {
 	color:rgb(50,100,200)
 }
-
+.y
+{
+	color:#e4ba26;
+}
 
 
 .pane,
