--- a/app/diwi/trunk/client/web/css/mijnpagina.css
+++ b/app/diwi/trunk/client/web/css/mijnpagina.css
@@ -1,229 +1,244 @@
 mijnpagina {
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.6em;
- font-size: 1.4em;
- margin: 0 0 16px 0;
+	font-family: Georgia, Times New Roman, Times, serif;
+	line-height: 1.6em;
+	font-size: 1.4em;
+	margin: 0 0 16px 0;
 }
-
 
 /*           Commentaarbox        */
 h10 {
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.1em;
- font-size: 1.0em;
- margin: 0 0 16px 0;
- color:#000000;
+	font-family: Georgia, Times New Roman, Times, serif;
+	line-height: 2.0em;
+	font-size: 0.9em;
+	margin: 0 0 16px 0;
+	color: #000000;
 }
-commentaarnavigatie {
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#505050;
-}
-lichter {
- color:#B4B4B4;
-}
-/*          personaliabox            */
 
+commentaarnavigatie {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #505050;
+}
+
+lichter {
+	color: #B4B4B4;
+}
+
+/*          personaliabox            */
 
 /************************** Nulde laag, z=1 **************************************************/
 
-#mijnpaginacontainer{
- position: absolute;
- width: 800px;
- top: 0px;
- left: 0px;
- z-index: 50;
+#mijnpaginacontainer {
+	position: absolute;
+	width: 800px;
+	top: 0px;
+	left: 0px;
+	z-index: 50;
 }
 
 /************************** Eerste laag, z=100 ************************************************/
 #personaliabox {
- position: absolute;
- width: auto;
- top: 80px;
- left: 578px;
- z-index: 50;
+	position: absolute;
+	width: auto;
+	top: 35px;
+	left: 578px;
+	z-index: 50;
 }
+
 #bullet {
- position: absolute;
- width: auto;
- top: 245px;
- left: 578px;
- z-index: 20;
+	position: absolute;
+	width: auto;
+	top: 200px;
+	left: 578px;
+	z-index: 20;
 }
+
 #commentaarbox {
- position: absolute;
- width: auto;
- top: 355px;
- left:560px;
- z-index: 50;
+	position: absolute;
+	width: auto;
+	top: 260px;
+	left: 560px;
+	z-index: 50;
 }
+
+#commentaarEditbox {
+	position: absolute;
+	width: auto;
+	top: 425px;
+	left: 560px;
+	z-index: 50;
+}
+
 #map {
- position: absolute;
- width: 420px;
- height: 320px;
- top: 190px;
- left: 60px;
- z-index: 100;
+	position: absolute;
+	width: 400px;
+	height: 300px;
+	top: 190px;
+	left: 60px;
+	z-index: 100;
 }
+
 #ookgelopen {
- position: absolute;
- width: 530px;
- top: 520px;
- left: 20px;
- z-index: 50; 
+	position: absolute;
+	width: 530px;
+	top: 520px;
+	left: 20px;
+	z-index: 50;
 }
-#ookgelopen p{
- line-height: 0.8em;
- font-size: 0.6em;
- margin: 0 0 16px 0;
- color:#949693;
+
+#ookgelopen p {
+	line-height: 0.8em;
+	font-size: 0.6em;
+	margin: 0 0 16px 0;
+	color: #949693;
 }
 
 /************************* Tweede laag, z=500 **********************************************/
-#kaartpopup1 {
- position: absolute;
- width: auto;
- top: 198px;
- left: 158px;
- z-index: 60;
-}
-#kaartpopup2 {
- position: absolute;
- width: auto;
- top: 198px;
- left: 358px;
- z-index: 60;
-}
-#kaartpopup3 {
- position: absolute;
- width: auto;
- top: 368px;
- left: 158px;
- z-index: 60;
-}
-#kaartpopup4 {
- position: absolute;
- width: auto;
- top: 368px;
- left: 358px;
- z-index: 60;
-}
+
 #meerdetails {
- position: absolute;
- width: auto;
- top: 560px;
- left: 260px;
- z-index: 60; 
+	position: absolute;
+	width: auto;
+	top: 560px;
+	left: 260px;
+	z-index: 60;
 }
-#meerdetails p{
- line-height:1.0em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#909090;
- font-weight:bold;
+
+#meerdetails p {
+	line-height: 1.0em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #909090;
+	font-weight: bold;
 }
 
 #commentaartekst {
- position: absolute;
- width: 200px;
- top: 380px;
- left: 605px;
- z-index: 60;
+	position: absolute;
+	width: 200px;
+	top: 275px;
+	left: 605px;
+	z-index: 60;
 }
-#commentaartekst p{
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#949693;
+
+#commentaartekst p {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #949693;
 }
 
 #commentaarnavigatie {
- position: absolute;
- width: auto;
- top: 505px;
- left: 620px;
- z-index: 60; 
+	position: absolute;
+	width: auto;
+	top: 485px;
+	left: 620px;
+	z-index: 860;
 }
-#commentaarnavigatie a{
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#505050;
+
+#commentaarEdittekst {
+	position: absolute;
+	width: 200px;
+	top: 435px;
+	left: 605px;
+	z-index: 60;
 }
-#commentaarnavigatie p{
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#505050;
+
+#commentaarEdittekst a {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #505050;
 }
+
 #commentaarnavigatie p {
- color:#B4B4B4;
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #505050;
 }
+
+#commentaarnavigatie p {
+	color: #B4B4B4;
+}
+
 #personaliameer {
- position: absolute;
- width: auto;
- top: 263px;
- left: 663px;
- z-index: 60;
+	position: absolute;
+	width: auto;
+	top: 253px;
+	left: 663px;
+	z-index: 60;
 }
-#personaliameer p{
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#949693;
+
+#personaliameer p {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #949693;
 }
 
 #personaliatekst {
- position: absolute;
- width: 200px;
- top: 80px;
- left: 605px;
- z-index: 60;
+	position: absolute;
+	width: 200px;
+	top: 35px;
+	left: 605px;
+	z-index: 60;
 }
-#personaliatekst p{
- line-height: 1.1em;
- font-size: 0.7em;
- margin: 0 0 16px 0;
- color:#949693;
+
+#personaliatekst p {
+	line-height: 1.1em;
+	font-size: 0.7em;
+	margin: 0 0 16px 0;
+	color: #949693;
 }
+
 #author {
- position: absolute;
- width: auto;
- top: 160px;
- left: 157px;
- z-index: 60;
- background-color:#F6F8F5;
- }
-#author p{
- line-height: 0.8em;
- font-size: 0.6em;
- margin: 0 0 16px 0;
- padding: 0;
- color:#CCCCCC;
+	position: absolute;
+	width: auto;
+	top: 160px;
+	left: 157px;
+	z-index: 60;
+	background-color: #F6F8F5;
+}
+
+#author p {
+	line-height: 0.8em;
+	font-size: 0.6em;
+	margin: 0 0 16px 0;
+	padding: 0;
+	color: #CCCCCC;
 }
 
 /*********************************** Derde laag, z=1000 *****************************************************************/
 #butspeelaf {
- position: absolute;
- width: auto;
- top: 476px;
- left: 74px;
- z-index: 60;
+	position: absolute;
+	width: auto;
+	top: 466px;
+	left: 74px;
+	z-index: 560;
 }
+
+#butstop {
+	position: absolute;
+	width: auto;
+	top: 466px;
+	left: 274px;
+	z-index: 560;
+}
+
 #butwijzigprofiel {
- position: absolute;
- width: auto;
- top: 310px;
- left: 650px;
- z-index: 60;
+	position: absolute;
+	width: auto;
+	top: 310px;
+	left: 650px;
+	z-index: 60;
 }
+
 #butkiesroute {
- position: absolute;
- width: auto;
- top: 102px;
- left: 156;
- z-index: 70;
+	position: absolute;
+	width: auto;
+	top: 102px;
+	left: 156;
+	z-index: 70;
 }
 
 
