--- a/app/diwi/trunk/client/web/css/mypagebasis.css
+++ b/app/diwi/trunk/client/web/css/mypagebasis.css
@@ -1,183 +1,194 @@
 body {
- position: relative;
- margin: 0px;
- padding: 0;
- font-size: 1.1em;
- font-family: verdana, arial, helvetica, sans-serif;
- color:#5a3d1c;
+	position: relative;
+	margin: 0px;
+	padding: 0;
+	font-size: 1.1em;
+	font-family: verdana, arial, helvetica, sans-serif;
+	color: #5a3d1c;
 }
+
 h1 {
- font-family: verdana, arial, helvetica, sans-serif;
- margin: 0 0 10px 0;
- padding: 0;
- color: #888;
+	font-family: verdana, arial, helvetica, sans-serif;
+	margin: 0 0 10px 0;
+	padding: 0;
+	color: #888;
 }
+
 h2 {
- font-family: verdana, arial, helvetica, sans-serif;
- margin: 0 0 5px 0;
- padding: 0;
- font-size: 1.1em;
+	font-family: verdana, arial, helvetica, sans-serif;
+	margin: 0 0 5px 0;
+	padding: 0;
+	font-size: 1.1em;
 }
+
 input {
-	width:				50px;
-	text-align:			right;
-	padding:			1px;
-	margin-right:		15px;
+	width: 50px;
+	text-align: right;
+	padding: 1px;
+	margin-right: 15px;
 }
-h11{
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.6em;
- font-size: 1.5em;
- margin: 0 0 16px 0;
- color:#000000;
+
+h11 {
+	font-family: Georgia, Times New Roman, Times, serif;
+	line-height: 1.6em;
+	font-size: 1.5em;
+	margin: 0 0 16px 0;
+	color: #000000;
 }
 
 .content>p {
- margin: 0;
+	margin: 0;
 }
+
 .content>p+p {
- text-indent: 30px;
+	text-indent: 30px;
 }
+
 a {
- color: grey;
- font-family: verdana, arial, helvetica, sans-serif;
-/* font-weight: 600;*/
- text-decoration: none;
- cursor:pointer;
+	color: gray;
+	font-family: verdana, arial, helvetica, sans-serif; /* font-weight: 600;*/
+	text-decoration: none;
+	cursor: pointer;
 }
+
 a:link {
 }
+
 a:visited {
 }
+
 a:hover {
 /* background-color: #ffffff;*/
 }
+
 /* All the content boxes belong to the content class. */
 .header {
- position: relative;
- width: auto;
- height:20
- min-width: 120px;
- margin: 0 210px 20px 170px;
- padding: 10px;
- z-index: 300;
+	position: relative;
+	width: auto;
+	height: 20;
+	min-width: 120px;
+	margin: 0 210px 20px 170px;
+	padding: 10px;
+	z-index: 300;
 }
-
 
 /*          personaliabox            */
 
-
 /************************** Nulde laag, z=1 **************************************************/
 
-#back{
- position: absolute;
- width: 800px;
- top: 0px;
- left: 556px;
- z-index: 1;
+#back {
+	position: absolute;
+	width: 800px;
+	top: 0px;
+	left: 556px;
+	z-index: 1;
 }
-
-
 
 /************************** Eerste laag, z=100 ************************************************/
 
 #logo {
- position: absolute;
- width: auto;
- top: 0px;
- left: 0px;
- z-index: 20;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 0px;
+	z-index: 20;
 }
 
 #kaart {
- position: absolute;
- width: auto;
- top: 170px;
- left: 18px;
- z-index: 20;
+	position: absolute;
+	width: auto;
+	top: 170px;
+	left: 18px;
+	z-index: 20;
 }
 
-#copyright{
- position: absolute;
- width: auto;
- top: 570px;
- left: -5px;
- z-index: 20;
+#copyright {
+	position: absolute;
+	width: auto;
+	top: 570px;
+	left: -5px;
+	z-index: 20;
 }
 
 /************************* Tweede laag, z=500 **********************************************/
 #line {
- position: absolute;
- width: auto;
- top: 50px;
- left: 150px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 50px;
+	left: 150px;
+	z-index: 30;
 }
 
 #butroutes {
- position: absolute;
- width: auto;
- top: 0px;
- left: 216px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 216px;
+	z-index: 30;
 }
+
 #buthome {
- position: absolute;
- width: auto;
- top: 0px;
- left: 306px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 306px;
+	z-index: 30;
 }
+
 #butmijnpagina {
- position: absolute;
- width: auto;
- top: 0px;
- left: 491px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 491px;
+	z-index: 30;
 }
+
 #butmaakroute {
- position: absolute;
- width: auto;
- top: 0px;
- left: 630px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 630px;
+	z-index: 30;
 }
 
 #butuitloggen {
- position: absolute;
- width: auto;
- top: 0px;
- left:745px;
- z-index: 30;
+	position: absolute;
+	width: auto;
+	top: 0px;
+	left: 745px;
+	z-index: 30;
 }
 
 #paginaheader {
- position: absolute;
- width: auto;
- top: 67px;
- left: 157px;
- z-index: 30; 
+	position: absolute;
+	width: auto;
+	top: 67px;
+	left: 157px;
+	z-index: 30;
 }
-#paginaheader p{
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.6em;
- font-size: 1.4em;
- margin: 0 0 16px 0;
- font-weight:bold;
+
+#paginaheader p {
+	font-family: Georgia, Times New Roman, Times, serif;
+	line-height: 1.6em;
+	font-size: 1.4em;
+	margin: 0 0 16px 0;
+	font-weight: bold;
 }
+
 #routeheader {
- position: absolute;
- width: auto;
- top: 130px;
- left: 157px;
- z-index: 30;
- background-color:#F6F8F5;
+	position: absolute;
+	width: auto;
+	top: 130px;
+	left: 157px;
+	z-index: 30;
+	background-color: #F6F8F5;
 }
+
 #routeheader p {
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.1em;
- font-size: 1.1em;
- margin: 0 0 16px 0;
- padding: 0;
- font-weight:bold;
+	font-family: Georgia, Times New Roman, Times, serif;
+	line-height: 1.1em;
+	font-size: 1.1em;
+	margin: 0 0 16px 0;
+	padding: 0;
+	font-weight: bold;
 }
