--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -5,7 +5,7 @@ body {
 	font-size: 1.1em;
 	font-family: verdana, arial, helvetica, sans-serif;
 	color: #5a3d1c;
-
+	background: #00FF00 url(../home/images/back.gif);
 }
 
 H1 {
@@ -71,7 +71,7 @@ H4 {
 .header {
 	position: relative;
 	width: auto;
-	height: 20;
+	height: 20px;
 	min-width: 120px;
 	margin: 0 210px 20px 170px;
 	z-index: 300;
@@ -79,8 +79,8 @@ H4 {
 
 #header {
 	position: absolute;
-	width: 100;
-	height: 20;
+	width: 100px;
+	height: 20px;
 	top: 20px;
 	left: 100px;
 	z-index: 1;
@@ -95,20 +95,15 @@ H4 {
 	background-color: #F6F8F5;
 }
 
-#Welkom {
-}
-
-#faq {
-}
-
-#routespagina {
+.button {
+	cursor:pointer;
 }
 
 #vasteroutes-lb {
 	position: absolute;
 	width: auto;
 	top: 20px;
-	left: 356;
+	left: 356px;
 	z-index: 100;
 }
 
@@ -116,7 +111,7 @@ H4 {
 	position: absolute;
 	width: 597px;
 	top: 0px;
-	left: 0;
+	left: 0px;
 	z-index: 70;
 	background-color: #F6F8F5;
 }
@@ -360,6 +355,6 @@ H4 {
 	position: absolute;
 	width: auto;
 	top: 205px;
-	left: 513;
+	left: 513px;
 	z-index: 100;
 }
