--- a/app/diwi/trunk/client/web/css/mypagebasis.css
+++ b/app/diwi/trunk/client/web/css/mypagebasis.css
@@ -5,6 +5,7 @@ body {
 	font-size: 1.1em;
 	font-family: verdana, arial, helvetica, sans-serif;
 	color: #5a3d1c;
+	background: #F6F8F5;
 }
 
 h1 {
@@ -65,11 +66,15 @@ a:hover {
 .header {
 	position: relative;
 	width: auto;
-	height: 20;
+	height: 20px;
 	min-width: 120px;
 	margin: 0 210px 20px 170px;
 	padding: 10px;
 	z-index: 300;
+}
+
+.pagina {
+	background-color: #F6F8F5;
 }
 
 /*          personaliabox            */
