--- a/app/diwi/trunk/client/web/css/maakroute.css
+++ b/app/diwi/trunk/client/web/css/maakroute.css
@@ -4,6 +4,7 @@
 	top: 0px;
 	left: 0px;
 	z-index: 50;
+	background-color: #F6F8F5;
 }
 
 .slidertext {
@@ -259,7 +260,7 @@
 	width: auto;
 	top: 125px;
 	left: 585px;
-	z-index: 30;
+	z-index: 130;
 }
 
 #leguitbullet {
@@ -267,7 +268,7 @@
 	width: auto;
 	top: 290px;
 	left: 578px;
-	z-index: 20;
+	z-index: 120;
 }
 
 #leguittext {
@@ -275,7 +276,7 @@
 	width: 200px;
 	top: 150px;
 	left: 605px;
-	z-index: 35;
+	z-index: 135;
 }
 
 .genroutetekst {
