--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -22,9 +22,9 @@ h1 {
 
 h2 {
 	font-family: verdana, arial, helvetica, sans-serif;
-	margin: 0 0 5px 0;
+	margin-left: 20px;
 	padding: 0;
-	font-size: 1.1em;
+	font-size: 1.0em;
 }
 
 
