--- a/app/diwi/trunk/client/web/css/maakroute.css
+++ b/app/diwi/trunk/client/web/css/maakroute.css
@@ -278,11 +278,17 @@
 }
 
 #leguittext {
-	position: absolute;
+/*	position: absolute;
 	width: 200px;
 	top: 150px;
 	left: 605px;
-	z-index: 135;
+	z-index: 135; */
+
+	position: relative;
+	width: auto;
+	top: -185px;
+	left: 25px;
+	z-index: 200;
 }
 
 .genroutetekst {
@@ -300,18 +306,12 @@
 	z-index: 60;
 }
 
-#generated-routes-image {
-	position: absolute;
-	width: auto;
-	top: 350px;
-	left: 605px;
-	z-index: 60;
-}
+
 
 #generated-routes-image-big {
 	position: absolute;
 	width: auto;
-	top: 80px;
+	top: 200px;
 	left: 50px;
 	z-index: 60;
 }
