diwi: generate route shows route on map

--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -116,6 +116,13 @@ p {
 	cursor:pointer;
 }
 
+#map {
+	margin-left: 5px;
+	margin-top: 5px;
+	width: 580px;
+	height: 400px;
+}
+
 #vasteroutes-lb {
 	position: absolute;
 	width: auto;
