diwi: web code cleanup

--- a/app/diwi/trunk/client/web/css/maakroute.css
+++ b/app/diwi/trunk/client/web/css/maakroute.css
@@ -56,7 +56,7 @@
 /*	top: 223px; */
 }
 
-#slider1 {
+#s1 {
 	position: absolute;
 	top: 122px;
 	left: 200px;
@@ -71,7 +71,7 @@
 	top: 153px;
 }
 
-#slider2 {
+#s2 {
 	position: absolute;
 	top: 152px;
 	left: 200px;
@@ -86,7 +86,7 @@
 	top: 183px;
 }
 
-#slider3 {
+#s3 {
 	position: absolute;
 	top: 182px;
 	left: 200px;
@@ -101,7 +101,7 @@
 	top: 213px;
 }
 
-#slider4 {
+#s4 {
 	position: absolute;
 	top: 212px;
 	left: 200px;
@@ -116,7 +116,7 @@
 	top: 243px;
 }
 
-#slider5 {
+#s5 {
 	position: absolute;
 	top: 242px;
 	left: 200px;
@@ -131,7 +131,7 @@
 	top: 273px;
 }
 
-#slider6 {
+#s6 {
 	position: absolute;
 	top: 272px;
 	left: 200px;
@@ -146,7 +146,7 @@
 	top: 303px;
 }
 
-#slider7 {
+#s7 {
 	position: absolute;
 	top: 302px;
 	left: 200px;
@@ -161,7 +161,7 @@
 	top: 333px;
 }
 
-#slider8 {
+#s8 {
 	position: absolute;
 	top: 332px;
 	left: 200px;
@@ -176,7 +176,7 @@
 	top: 363px;
 }
 
-#slider9 {
+#s9 {
 	position: absolute;
 	top: 362px;
 	left: 200px;
@@ -191,7 +191,7 @@
 	top: 393px;
 }
 
-#slider10 {
+#s10 {
 	position: absolute;
 	top: 392px;
 	left: 200px;
