--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -117,11 +117,20 @@ p {
 }
 
 #map {
+	position: absolute;
+	z-index: 200;
+	display: none;
 	margin-left: 5px;
 	margin-top: 5px;
 	width: 580px;
-	height: 400px;
+	height: 420px;
 	border: 1px solid black;
+}
+
+#mapanchor {
+	position: relative;
+	width: 580px;
+	height: 400px;
 }
 
 #vasteroutes-lb {
