--- a/app/diwi/trunk/client/web/css/maakroute.css
+++ b/app/diwi/trunk/client/web/css/maakroute.css
@@ -30,6 +30,20 @@
 	font-size: 12px;
 }
 
+#radiobuttons {
+	position: absolute;
+	width: auto;
+	top: 60px;
+	left: 165px;
+	z-index: 60;
+}
+
+#radiobuttons input {
+	width: auto;
+	text-align: left;
+	padding: 0px;
+	margin-right: 0px;
+}
 /*
 #startpunt-lb {
 	top: 30px;
@@ -53,7 +67,7 @@
 
 #afstand-lb {
 	top: 30px;
-	left: 295px;
+	left: 345px;
 }
 
 #caption1 {
@@ -113,7 +127,7 @@
 	z-index: 50;
 }
 
-#bedrijven {
+#industrie {
 	top: 210px;
 }
 
@@ -128,7 +142,7 @@
 	z-index: 50;
 }
 
-#bewoning {
+#bebouwd {
 	top: 240px;
 }
 
@@ -158,7 +172,7 @@
 	z-index: 50;
 }
 
-#heide {
+#heizand {
 	top: 300px;
 }
 
@@ -173,7 +187,7 @@
 	z-index: 50;
 }
 
-#grasland {
+#natuurgras {
 	top: 330px;
 }
 
@@ -188,7 +202,7 @@
 	z-index: 50;
 }
 
-#zee {
+#grootwater {
 	top: 360px;
 }
 
@@ -203,7 +217,7 @@
 	z-index: 50;
 }
 
-#sloten {
+#kleinwater {
 	top: 390px;
 }
 
@@ -231,20 +245,7 @@
 	z-index: 50;
 }
 
-#radiobuttons {
-	position: absolute;
-	width: auto;
-	top: 430px;
-	left: 220px;
-	z-index: 60;
-}
 
-#radiobuttons input {
-	width: auto;
-	text-align: left;
-	padding: 0px;
-	margin-right: 0px;
-}
 
 .listboxes {
 	position: absolute;
