diwi: mapstuff and js trip playback

--- a/app/diwi/trunk/client/web/css/home.css
+++ b/app/diwi/trunk/client/web/css/home.css
@@ -427,6 +427,14 @@ p {
 	z-index: 100;
 }
 
+#triplistbacklink {
+	display: none;
+	margin-left: 20px;
+	margin-right: 20px;
+	line-height: 1.2em;
+	font-size: 0.7em;
+}
+
 #triplist {
 	margin-left: 20px;
 	margin-right: 20px;
